<resources>
    <string name="app_name">NavigationDrawer</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="category_1">Category 1</string>
    <string name="category_2">Category 2</string>
    <string name="item_0">item 0</string>
    <string name="item_1">item 1</string>
    <string name="item_2">item 2</string>
    <string name="item_3">item 3</string>
    <string name="item_4">item 4</string>

</resources>
