<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/category_1">
        <menu>
            <group
                android:id="@+id/grp1"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_0"
                    android:icon="@drawable/icon_0"
                    android:title="@string/item_0" />
                <item
                    android:id="@+id/item_1"
                    android:icon="@drawable/icon_1"
                    android:title="@string/item_1" />
                <item
                    android:id="@+id/item_2"
                    android:icon="@drawable/icon_2"
                    android:title="@string/item_2" />
            </group>
        </menu>
    </item>

    <item android:title="@string/category_2">
        <menu>
            <group
                android:id="@+id/grp2"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/item_3"
                    android:icon="@drawable/icon_3"
                    android:title="@string/item_3" />
                <item
                    android:id="@+id/item_4"
                    android:icon="@drawable/icon_4"
                    android:title="@string/item_4" />
            </group>
        </menu>
    </item>

</menu>